--- a/index.html
+++ b/index.html
@@ -110,16 +110,14 @@
     <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
                          <p></p></div>
   
-      <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">14. Cointiply</a></h3>
-        <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
-	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
-    <img src="/file/cply1.gif" width="468" height="60"/></a><br>  
-  <p></p></div>
-
-
- 
+     <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+	<a href="https://pipeflare.io/r/22uo">14. Pipeflare</a></h3>
+       <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
+	<a target="_blank" href="https://pipeflare.io/r/22uo" >
+    <img src="/file/pf.jpg" width="468" height="60"/></a><br>  
+       <p></p></div> 
   
+       
          <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
 	<a href="https://cryptowin.io/ref/tsaroz">15. Cryptowin.io</a></h3>
            <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
@@ -127,6 +125,12 @@
     <img src="/file/cwin.png" width="468" height="60"/></a><br>  
   <p></p></div>
   
+  <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+	<a href="http://cointiply.com/r/Jx6Kp">16. Cointiply</a></h3>
+        <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
+	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
+    <img src="/file/cply1.gif" width="468" height="60"/></a><br>  
+  <p></p></div>
 
           <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
 	<a href="https://satoshihero.com/en/register?r=j2337039">16. Satoshi Hero</a></h3>
@@ -154,11 +158,7 @@
     <img src="/file/vie.png" width="468" height="60"/></a><br>  
     <p></p>
 
-  <h3>
-	<a href="https://pipeflare.io/r/22uo">20. Pipeflare</a></h3>
-	<a target="_blank" href="https://pipeflare.io/r/22uo" >
-    <img src="/file/pf.jpg" width="468" height="60"/></a><br>  
-    <p></p>
+
               <h3>
 	<a href="https://adsbitly.com/?r=7572">21. Adsbitly</a></h3>
     <a target="_blank" href="https://adsbitly.com/?r=7572"><img src="/file/adb.png" width="468" height="60"></a>
