--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
        <p>$0.0004 every 3 mins. Easy captcha.</p>
 	<a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  
-    <p></p>
+       <p></p></div>
 
 
 
