--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <p></p></div>
     
         <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">       <h3>
-	<a href="hhttps://adspea.com/?r=1261">11. Adspea. Shortlinks, PTC, hourly bonus. $0.5 to FaucetPay </a></h3>
-                       <p>$0.0006 every 3 mins. </p>
+	<a href="hhttps://adspea.com/?r=1261">11. Adspea</a></h3>
+                       <p>$0.0006 every 3 mins. Shortlinks, PTC, hourly bonus. $0.5 to FaucetPay </p>
     <a target="_blank" href="https://adspea.com/?r=1261"><img src="/file/spa.gif" width="468" height="60"></a>
                        <p></p></div>
     
