--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
 	<a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  
        <p></p></div>
+    
+    </div>
 
 
   <div class="panel" id="two-panel">
