--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@
           
       
     <h4> Solana FaucetPay<br>
+      <div class="w3-bar">
+  <button class="w3-bar-item w3-button" style="width:33">Solana</button>
+  <button class="w3-bar-item w3-button w3-teal" style="width:33">Solana</button>
+</div>
        <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
           <a href="https://stationbit.xyz/FPsola/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.002 Solana every 3 minute - Station</a><br>
        <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 3 minute - Olefaucet</a><br>
