--- a/index.html
+++ b/index.html
@@ -266,10 +266,13 @@
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
           
       
-    <h4> Solana FaucetPay<br>
-      <div class="w3-bar">
-  <button class="w3-bar-item w3-button" style="width:33">Solana</button>
-  <button class="w3-bar-item w3-button w3-teal" style="width:33">Solana</button>
+    <h4><center> Solana FaucetPay</center><br>
+    <div class="w3-center">
+<div class="w3-bar">
+  <button class="w3-button w3-black">Button</button>
+  <button class="w3-button w3-teal">Button</button>
+  <button class="w3-button w3-disabled">Button</button>
+</div>
 </div>
        <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
           <a href="https://stationbit.xyz/FPsola/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.002 Solana every 3 minute - Station</a><br>
