--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
     <h4><center> Solana FaucetPay</center><br>
     <div class="w3-center">
 <div class="w3-bar">
-  <button class="w3-button w3-black">Button</button>
-  <button class="w3-button w3-teal">Button</button>
-  <button class="w3-button w3-disabled">Button</button>
+  <button class="w3-button w3-black">Solana</button>
+  <button class="w3-button w3-teal">Solana</button>
+  <button class="w3-button w3-disabled">Solana</button>
 </div>
 </div>
        <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
