--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 <div class="w3-bar">
   <button class="w3-button w3-black">Solana</button>
   <button class="w3-button w3-teal">Solana</button>
-  <button class="w3-button w3-disabled">Solana</button>
+  <button class="w3-button w3-blue">Solana</button>
 </div>
 </div>
        <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
