--- a/index.html
+++ b/index.html
@@ -266,14 +266,14 @@
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
           
       
-    <h4><center> Solana FaucetPay</center><br>
+   <div class="w3-container">  <h4><center> Solana FaucetPay</center><br>
     <div class="w3-center">
 <div class="w3-bar">
   <button class="w3-button w3-teal">Solana</button>
   <button class="w3-button w3-black">Solana</button>
   <button class="w3-button w3-blue">Solana</button>
 </div>
-</div>
+     </div></div>
        <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
           <a href="https://stationbit.xyz/FPsola/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.002 Solana every 3 minute - Station</a><br>
        <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 3 minute - Olefaucet</a><br>
