--- a/index.html
+++ b/index.html
@@ -269,14 +269,12 @@
    <div class="w3-container">  <h4><center> Solana FaucetPay</center><br>
     <div class="w3-center">
 <div class="w3-bar">
-  <a href="https://www.w3schools.com" class="w3-button w3-teal">Solana</a>
-  <a href="https://www.w3schools.com" class="w3-button w3-black">Solana</a>
-  <a href="https://www.w3schools.com" class="w3-button w3-blue">Solana</a>
+  <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.0025 1 min</a>
+  <a href="https://stationbit.xyz/FPsola/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black">$0.002 1 min</a>
+  <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-blue">$0.00145 3 mins</a>
 </div>
      </div></div>
-       <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
-          <a href="https://stationbit.xyz/FPsola/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.002 Solana every 3 minute - Station</a><br>
-       <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 3 minute - Olefaucet</a><br>
+       
            
       <a href="https://faucet.mhabcoin.online/sol/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0012 Solana every 2 mins - Mhab coin</a><br>
       <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute - Extra Crypto</a><br>
