--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@
    <div class="w3-container">  <h4><center> Solana FaucetPay</center><br>
     <div class="w3-center">
 <div class="w3-bar">
+  <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-disabled w3-teal">$0.0025 1 min</a>
+  <a href="https://stationbit.xyz/FPsola/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black">$0.002 1 min</a>
+  <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-blue">$0.00145 3 mins</a>
+</div>
+      <div class="w3-bar">
   <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.0025 1 min</a>
   <a href="https://stationbit.xyz/FPsola/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black">$0.002 1 min</a>
   <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-blue">$0.00145 3 mins</a>
