--- a/index.html
+++ b/index.html
@@ -278,6 +278,17 @@
 
      </div></div>
        
+        <div class="w3-container">  <h4><center> Litecoin FaucetPay</center><br>
+    <div class="w3-center">
+<div class="w3-bar">
+  <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.002 1 min</a>
+  <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-blue">$0.0014 1 min</a>
+  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0013 1 min</a>
+      </div><p></p>
+<div class="w3-bar">
+  <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-teal">$0.001 1 mins</a>
+
+     </div></div>
       
        <h4> Litecoin FaucetPay<br>
          <a href="https://stationbit.xyz/FPlite/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.002 Litecoin every 3 minute - Station</a><br>
