--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
   <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0013 1 min</a>
       </div><p></p>
 <div class="w3-bar">
+   <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-blue">$0.0013 3 mins</a>
+  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0013 1 min</a>
   <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-teal">$0.001 1 mins</a>
 
      </div></div>
