--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
 <div class="w3-bar">
   <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.00225 1 min</a>
   <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black">$0.0014 1 min</a>
-  <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-blue">$0.00145 3 mins</a>
+  <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-teal">$0.00145 3 mins</a>
       </div><p></p>
 <div class="w3-bar">
-  <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-teal">$0.002 3 mins</a>
+  <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black">$0.002 3 mins</a>
 
      </div></div>
        
@@ -282,13 +282,13 @@
     <div class="w3-center">
 <div class="w3-bar">
   <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.002 1 min</a>
-  <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-blue">$0.0014 1 min</a>
-  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0013 1 min</a>
+  <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0014 1 min</a>
+  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-teal">$0.0013 1 min</a>
       </div><p></p>
 <div class="w3-bar">
-   <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-blue">$0.0013 3 mins</a>
-  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0013 1 min</a>
-  <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-teal">$0.001 1 mins</a>
+   <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0013 3 mins</a>
+  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-teal">$0.0013 1 min</a>
+  <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.001 1 mins</a>
 
      </div></div>
       
