--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 <head>
    <title>Best Crypto Faucets List</title>
   <meta name="keywords" content="Best, crypto, faucet, earn, money, online, list, 2022">
@@ -324,7 +324,7 @@
   </div>
   </div>
 </div>
-            </div>
+            
 <br>
 <center>ccz.one @ 2021-2022</center><br>
 <script async src="//static.getclicky.com/101351040.js"></script>
