--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
           
       
-   <div class="w3-container">  <h4><center> Solana FaucetPay</center><br>
+    <div class="w3-container"> <center> <h4> Solana FaucetPay</h4></center><br>
     <div class="w3-center">
 <div class="w3-bar">
   <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.00225 1 min</a>
