--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
      </div></div>
        
-        <div class="w3-container">  <h4><center> Litecoin FaucetPay</center><br>
+      <div class="w3-container"> <center> <h4> Litecoin FaucetPay </h4> </center><br>
     <div class="w3-center">
 <div class="w3-bar">
   <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.002 1 min</a>
