--- a/index.html
+++ b/index.html
@@ -268,12 +268,11 @@
       
     <div class="w3-container"> <center> <h4> Solana FaucetPay</h4></center><br>
     <div class="w3-center">
-  <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-teal" style="width:50%">Litefaucet $0.00225 1 min</a>
-  <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black" style="width:50%">Extra Crypto $0.0014 1 min</a>
+  <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-teal" style="width:60%">Litefaucet $0.00225 1 min</a><p></p>
+  <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black" style="width:60%">Extra Crypto $0.0014 1 min</a>
         </div><p></p>
-
-  <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-teal" style="width:49%">Ole faucet $0.00145 3 mins</a>
-  <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black" style="width:49%">Freesolana $0.002 3 mins</a>
+  <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-teal" style="width:60%">Ole faucet $0.00145 3 mins</a><p></p>
+  <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-black" style="width:60%">Freesolana $0.002 3 mins</a><p></p>
 
     </div></div>
        
