--- a/index.html
+++ b/index.html
@@ -278,10 +278,9 @@
        
       <div class="w3-container"> <center> <h4> Litecoin FaucetPay </h4> </center><br>
     <div class="w3-center">
-<div class="w3-bar">
-  <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-teal">$0.002 1 min</a>
-  <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0014 1 min</a>
-  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-teal">$0.0013 1 min</a>
+  <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Claimlitecoin $0.002 1 min</a>
+  <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Earnalot $0.0014 1 min</a>
+  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Payou win $0.0013 1 min</a>
       </div><p></p>
 <div class="w3-bar">
    <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-black">$0.0013 3 mins</a>
