--- a/index.html
+++ b/index.html
@@ -280,17 +280,12 @@
     <div class="w3-center">
   <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Claimlitecoin $0.002 1 min</a><p></p>
   <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Earnalot $0.0014 1 min</a><p></p>
+  <a href="http://ltcking.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Ltc king $0.0014 1 min</a><p></p>
+        <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Ole Faucet $0.0014 3 mins</a><p></p>
   <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Payou win $0.0013 1 min</a><p></p>
       </div></div>
       
-       <h4> Litecoin FaucetPay<br>
-         <a href="https://stationbit.xyz/FPlite/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.002 Litecoin every 3 minute - Station</a><br>
-         <a href="https://luckyfaucet.xyz/litecoin?r=saroj433@gmail.com">$0.0014 Litecoin every 1 minute - Lucky faucet</a><br>
-      <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Claimcoins</a><br>
-         <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Payou win</a><br>
-         <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00145 Litecoin every 3 minute - Olefaucet</a><br>
-         <a href="https://luckyfaucet.xyz/litecoin?r=saroj433@gmail.com">$0.0014 Litecoin every 1 minute - Lucky faucet</a><br>
-         <a href="http://ltcking.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0014 Litecoin every 1 minute - LTC King</a><br>
+
  
           
        <h4> Tron FaucetPay<br>
