--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
   <a href="https://claimliteco.in/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Claimlitecoin $0.002 1 min</a><p></p>
   <a href="https://earnalot.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Earnalot $0.0014 1 min</a><p></p>
   <a href="http://ltcking.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Ltc king $0.0014 1 min</a><p></p>
-        <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Ole Faucet $0.0014 3 mins</a><p></p>
-  <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Payou win $0.0013 1 min</a><p></p>
+          <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">Payou win $0.0013 1 min</a><p></p>
+      <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Ole Faucet $0.0014 3 mins</a><p></p>
       </div></div>
       
 
