--- a/index.html
+++ b/index.html
@@ -175,17 +175,28 @@
 
   <div class="panel" id="two-panel">
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
+    No shortlink faucets that pays direct to FaucetPay for solving captcha.
+       <div class="w3-container"> <center> <h4>Diamond Faucets</h4>
+         $0.00027 worth of coins every 5 mins</center>
+    <div class="w3-bar"><div class="w3-center">
+  <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a><p></p>
+  <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a><p></p>
+  <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a><p></p>
+          <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
+
+      </div></div></div>
+    
     <h4>
      Litecoin FaucetPay<br>
     <a href="https://bitcoincuba.net/freeltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00045+ Litecoin - Bitcoincuba Faucet 1 min</a><br>
-      <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br> 
+      <a href="">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br> 
       <a href="https://herafaucet.top/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Hera Faucet 5 mins</a><br> 
        <a href="https://konstantinova.net/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Konstantinova 7 mins</a><br>
        <a href="https://bagi.co.in/litecoin/?ref=77258">300 Litecoin - Bagi Faucet 60 mins</a><br>
          <a href="https://keran.co/LTC/?ref=106490">300 Litecoin - Keran Faucet 60 mins</a><br>
       
      <br> Bitcoincash FaucetPay<br>
-    <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
+    <a href="">$0.00027 Bitcoincash - Diamond Faucet 5 mins</a><br>
       <a href="https://herafaucet.top/bitcoin-cash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.0002 Bitcoincash - Hera Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/bitcoincash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv">$0.0002 Bitcoincash - Konstantinova 7 mins</a><br>
       <a href="https://bagi.co.in/bitcoincash/?ref=18941">100 Bitcoincash - Bagi Faucet 60 mins</a><br>
@@ -194,7 +205,7 @@
          <br> 
      Ethereum FaucetPay<br>
     <a href="https://bitcoincuba.net/freeeth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.00045+ Ethereum - Bitcoincuba Faucet 1 min</a><br>
-      <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.00027 Ethereum - Diamond Faucet 5 mins</a><br>
+      <a href="">$0.00027 Ethereum - Diamond Faucet 5 mins</a><br>
       <a href="https://herafaucet.top/ethereum/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb">$0.0002 Ethereum - Hera Faucet 5 mins</a><br>
 
 
