--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
   <div class="panel" id="two-panel">
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
     No shortlink faucets that pays direct to FaucetPay for solving captcha.
-       <div class="w3-container"> <center> <h4>Diamond Faucets</h4>
-         $0.00027 worth of coins every 5 mins</center>
-    <div class="w3-bar"><div class="w3-center">
-  <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a><p></p>
-  <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a><p></p>
-  <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a><p></p>
-          <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
+    <div class="w3-container"> <center> <h4>Diamond Faucets</h4><p> $0.00027 worth of coins every 5 mins</p>
+        </center>
+    <div class="w3-bar">
+  <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a>
+  <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a>
+  <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
+          <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a>
 
       </div></div></div>
     
