--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@
   <a href="https://diamondfaucet.space/bcash/?r=qp54ecky24jctxw7emw6n0t9stfw279reve4fxj4uv" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a>
   <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
           <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a>
+      <a href="https://diamondfaucet.space/trx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:20%">Tron</a>
+        <a href="https://diamondfaucet.space/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:20%">USDT</a>
+  <a href="https://diamondfaucet.space/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
+          <a href="https://diamondfaucet.space/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a>
+      <a href="https://diamondfaucet.space/trx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:20%">Tron</a>
 
       </div></div></div>
     
