--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 	<a target="_blank" href="https://coincet.com/?r=30824" >
     <img src="/file/coincet.png" width="468" height="60"/></a><br>  
        <p></p></div>
-    </div>
+    </div></div>
 
 
   <div class="panel" id="two-panel">
