--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
            <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
 	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">21. ES Faucet</a></h3>
-             <p>Multiple coins to claim. Dialy loyality bonus.</p>
+             <p>Multiple coins to claim. Daily loyality bonus.</p>
 	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
     <img src="/file/es1.gif" width="468" height="60"/></a><br>  
              <p></p></div>
