--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
   <a href="https://diamondfaucet.space/dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf" class="w3-button w3-round w3-teal" style="width:20%">Dash</a>
           <a href="https://diamondfaucet.space/zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij" class="w3-button w3-round w3-black" style="width:20%">Zcash</a><p></p>
       <a href="https://diamondfaucet.space/bnb/?r=0x06b7c06f3693aD2f809e864a4D9D38D36e7AD1F6" class="w3-button w3-round w3-teal" style="width:20%">BNB</a>
-    </center></div></div>  </div>
-    
+    </center></div></div> 
     <h4>
      Litecoin FaucetPay<br>
     <a href="https://bitcoincuba.net/freeltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00045+ Litecoin - Bitcoincuba Faucet 1 min</a><br>
