--- a/index.html
+++ b/index.html
@@ -227,7 +227,24 @@
       <a href="https://diamondfaucet.space/bnb/?r=0x06b7c06f3693aD2f809e864a4D9D38D36e7AD1F6" class="w3-button w3-round w3-teal" style="width:20%">BNB</a>
     </center><p></p></div> 
     <p></p>
-
+    <div class="w3-container w3-border w3-border-red"> <center> <h4>Bagi Faucets</h4><p> $0.0003+ worth of coins every 60 mins. Needs to withdraw but can withdraw any amount anytime.</p>
+      
+      <div class="w3-bar">
+    <a href="https://bagi.co.in/bitcoin/?ref=5499" class="w3-button w3-round w3-teal" style="width:20%">Bitcoin</a>
+    <a href="https://bagi.co.in/binance/?ref=40347" class="w3-button w3-round w3-black" style="width:20%">BNB</a>
+    <a href="https://bagi.co.in/bitcoincash/?ref=18941" class="w3-button w3-round w3-teal" style="width:20%">Bitcoincash</a>
+    <a href="https://bagi.co.in/dash/?ref=51847" class="w3-button w3-round w3-black" style="width:20%">Dash</a><p></p>
+    <a href="hhttps://bagi.co.in/dogecoin/?ref=13460" class="w3-button w3-round w3-teal" style="width:20%">Dogecoin</a>
+    <a href="https://bagi.co.in/litecoin/?ref=77258" class="w3-button w3-round w3-black" style="width:20%">Litecoin</a>
+    <a href="https://bagi.co.in/digibyte/?ref=40848" class="w3-button w3-round w3-teal" style="width:20%">Digibyte</a>
+    <a href="https://bagi.co.in/zcash/?ref=28115" class="w3-button w3-round w3-black" style="width:20%">Zcash</a><p></p>
+    <a href="https://bagi.co.in/solana/?ref=4338" class="w3-button w3-round w3-teal" style="width:20%">Solana</a>
+    <a href="https://bagi.co.in/tron/?ref=50413" class="w3-button w3-round w3-black" style="width:20%">Tron</a>
+    <a href="https://bagi.co.in/tether/?ref=47172" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
+    <a href="https://bagi.co.in/ethereum/?ref=37373" class="w3-button w3-round w3-black" style="width:20%">Ethereum</a><p></p>
+    <a href="https://bagi.co.in/feyorra/?ref=14565" class="w3-button w3-round w3-teal" style="width:20%">Feyyora</a>
+    </center><p></p></div>
+      <p></p>
 
   </div>
 
