--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://coinkrab.com/refer/user/1799">1. Krabcoin.</a></h3>
-      <p> $0.0012+ every 5 mins. 36 claims to FaucetPay. Balance empty often but admin adds it soon.</p>
+      <p> $0.0012+ every 5 mins. 36 claims to FaucetPay. $0.05 to FaucetPay</p>
       <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
       <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
     </div>
-
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
       <a href="https://kpanda.co/?r=566">2. Kpanda</a></h3>
                 <p>$0.00075 every 3 mins. PTC, Shortlinks. $0.01 withdrawal to FaucetPay </p>
