--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <a href="https://bagi.co.in/binance/?ref=40347" class="w3-button w3-round w3-black" style="width:20%">BNB</a>
     <a href="https://bagi.co.in/bitcoincash/?ref=18941" class="w3-button w3-round w3-teal" style="width:20%">Bitcoincash</a>
     <a href="https://bagi.co.in/dash/?ref=51847" class="w3-button w3-round w3-black" style="width:20%">Dash</a><p></p>
-    <a href="hhttps://bagi.co.in/dogecoin/?ref=13460" class="w3-button w3-round w3-teal" style="width:20%">Dogecoin</a>
+    <a href="https://bagi.co.in/dogecoin/?ref=13460" class="w3-button w3-round w3-teal" style="width:20%">Dogecoin</a>
     <a href="https://bagi.co.in/litecoin/?ref=77258" class="w3-button w3-round w3-black" style="width:20%">Litecoin</a>
     <a href="https://bagi.co.in/digibyte/?ref=40848" class="w3-button w3-round w3-teal" style="width:20%">Digibyte</a>
     <a href="https://bagi.co.in/zcash/?ref=28115" class="w3-button w3-round w3-black" style="width:20%">Zcash</a><p></p>
@@ -256,7 +256,7 @@
       <a href="https://keran.co/DGB/?ref=56381" class="w3-button w3-round w3-teal" style="width:20%">Digibyte</a>
       <a href="https://keran.co/ZEC/?ref=34628" class="w3-button w3-round w3-black" style="width:20%">Zcash</a><p></p>
       <a href="https://keran.co/SOL/?ref=6441" class="w3-button w3-round w3-teal" style="width:20%">Solana</a>
-      <a href="https://keran.co/TRX/?ref=73325" class="w3-button w3-round w3-black" style="width:20%">Tron</a><p></p>
+      <a href="https://keran.co/TRX/?ref=73325" class="w3-button w3-round w3-black" style="width:20%">Tron</a>
       <a href="https://keran.co/USDT/?ref=68785" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
       <a href="https://keran.co/ETH/?ref=4476" class="w3-button w3-round w3-black" style="width:20%">Ethereum</a><p></p>
       <a href="https://bagi.co.in/feyorra/?ref=14565" class="w3-button w3-round w3-teal" style="width:20%">Feyyora</a>
