--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
     <img src="/file/coincet.png" width="468" height="60"/></a><br>  
        <p></p></div>
 
+       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">25. CoinpayU</a></h3>
+             <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
+        <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
+          <img src="/file/payu" width="468" height="60"/></a><br>  
+             <p></p></div>
     </div>
 
 
