--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <a href="https://www.coinpayu.com/?r=tsaroz">25. CoinpayU</a></h3>
              <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
         <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
-          <img src="/file/payu" width="468" height="60"/></a><br>  
+          <img src="/file/payu.gif" width="468" height="60"/></a><br>  
              <p></p></div>
     </div>
 
