--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <base target="_blank">
 </head>
 <body>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Goto Top</button>
+
     <h2>Best Crypto Faucets</h2>
 
 <div class="warpper">
@@ -308,11 +310,40 @@
       <a href="https://fptrx.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:60%">Ole faucet $0.0013 3 mins</a><p></p>
       <a href="https://grabtrx.link?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">Grabtrx $0.001 1 min</a><p></p>
           </div></div><p></p>
+
+          <div class="w3-container w3-border w3-border-red"> <center> <h4> Dogecoin FaucetPay </h4> </center>
+            <div class="w3-center">
+              <a href="https://turpoorco.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Turpoorco $0.00125 1 min</a><p></p>
+                   </div></div><p></p>
                     
     </div>
   </div>
 </div>    
 <br>
-<center>ccz.one @ 2021-2022</center><br>
+<center>
+<p>ccz.one @ 2021-2022</p></center><br>
 <script async src="//static.getclicky.com/101351040.js"></script>
+
+<script>
+  //Get the button
+  var mybutton = document.getElementById("myBtn");
+  
+  // When the user scrolls down 20px from the top of the document, show the button
+  window.onscroll = function() {scrollFunction()};
+  
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      mybutton.style.display = "block";
+    } else {
+      mybutton.style.display = "none";
+    }
+  }
+  
+  // When the user clicks on the button, scroll to the top of the document
+  function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+  }
+  </script>
 </body>
+</html>
