--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
     <p></p>
     
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://coinkrab.com/refer/user/1799">1. Krabcoin.</a></h3>
-      <p> $0.001+ every 5 mins. $0.05 to FaucetPay</p>
-      <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
-      <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
-    </div>
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
+      <a href="https://kpanda.co/?r=566">1. Kpanda</a></h3>
+                <p>$0.00075 every 3 mins. PTC, Shortlinks. $0.01 withdrawal to FaucetPay </p>
+        <a target="_blank" href="https://kpanda.co/?r=566"><img src="/file/kpanda.gif" width="468" height="60"></a>
+                <p></p></div>
  
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
