--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-      <a href="https://kpanda.co/?r=566">2. Kpanda</a></h3>
-                <p>$0.00075 every 3 mins. PTC, Shortlinks. $0.01 withdrawal to FaucetPay </p>
-        <a target="_blank" href="https://kpanda.co/?r=566"><img src="/file/kpanda.gif" width="468" height="60"></a>
+      <a href="https://bits.re/?r=38209">2. Bits.re</a></h3>
+                <p>$0.0004 every 5 mins. PTC, Shortlinks. Easy Captcha.</p>
+        <a target="_blank" href="https://bits.re/?r=38209"><img src="/file/bitsre.gif" width="468" height="60"></a>
                 <p></p></div>
  
 
