--- a/index.html
+++ b/index.html
@@ -284,7 +284,17 @@
   <div class="panel" id="three-panel">
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
           
-      
+     <div class="w3-container w3-border w3-border-red"> <center> <h4> Bitcoin FaucetPay</h4></center>
+      <div class="w3-center">
+        <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesolana 4+ sats 2 mins</a>
+       <p></p>
+    <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesol 4+ sats 5 mins</a><p></p>
+    <a href="https://safbits.com?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Safbits 3 sats 1 min</a>
+       <p></p>
+    <a href="https://topbtc.tech/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Top tech 4+ sats 10 mins</a><p></p>
+  
+      </div></div><p></p> 
+
      <div class="w3-container w3-border w3-border-red"> <center> <h4> Solana FaucetPay</h4></center>
     <div class="w3-center">
   <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Litefaucet $0.00225 1 min</a><p></p>
