--- a/index.html
+++ b/index.html
@@ -284,9 +284,13 @@
             <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Faucet network 2 sats 5 mins</a>
            <p></p>
         <a href="https://www.coinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">coin network 2 sats 5 mins</a><p></p>
-        <a href="https://safbits.com?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Safbits 3 sats 1 min</a>
+        <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Fautsy 1 sats 10 mins</a>
            <p></p>
-        <a href="https://topbtc.tech/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Top tech 4+ sats 10 mins</a><p></p>
+        <a href="http://starbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Starbits 1 sats 10 mins</a><p></p>
+        <a href="http://claimbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Claimbits 1 sats 15 mins</a>
+        <p></p>
+        <a href="http://gobits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Gobits 1 sats 15 mins</a><p></p>
+       
       
           </div></div><p></p> 
 
