--- a/index.html
+++ b/index.html
@@ -73,28 +73,34 @@
 
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                          <a href="https://claimbits.net/?ref=167319">9. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+                          <a href="https://claimbits.net/?ref=167319">8. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
          <a target="_blank" href="https://claimbits.net/?ref=167319" >
            <img src="/file/cb1.gif" width="468" height="60"/></a><br>
          <p></p> </div>
 
          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-           <a href="https://coinpot.in/?r=135650">10. Coinpot.in</a></h3>
+           <a href="https://coinpot.in/?r=135650">9. Coinpot.in</a></h3>
                                   <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
              <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
                                   <p></p></div>
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-                      <a href="https://bitcoincyclone.com/?r=3177">11. Bitcoin Cyclone</a></h3>
+                      <a href="https://bitcoincyclone.com/?r=3177">10. Bitcoin Cyclone</a></h3>
                                  <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
                         <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
                                 <p></p></div>
 
                                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                  <a href="https://r.adbtc.top/7297">12. Adbtc.top</a></h3>
-                                  <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
-                                    <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
+                                  <a href="https://www.bytecash.in/?r=5691">11. Bytecash</a></h3>
+                                  <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
+                                    <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
                                   <p></p></div>
+
+                                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+                                    <a href="https://r.adbtc.top/7297">12. Adbtc.top</a></h3>
+                                    <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
+                                      <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
+                                    <p></p></div>
 
                                   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
                                     <a href="https://cryptowin.io/ref/tsaroz">13. Cryptowin.io</a></h3>
