--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html  lang="en">
 <head>
   <title>Best Crypto Faucets List</title>
+  <link rel="icon" type="image/x-icon" href="/file/favi.png">
   <meta name="keywords" content="Best, crypto, faucet, earn, money, online, list, 2022">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
