--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html  lang="en">
 <head>
+
   <title>Best Crypto Faucets List</title>
   <link rel="icon" type="image/x-icon" href="/file/favi.png">
   <meta name="keywords" content="Best, crypto, faucet, earn, money, online, list, 2022">
@@ -10,7 +11,7 @@
 </head>
 <body>
   <button onclick="topFunction()" id="myBtn" title="Go to top">Goto Top</button>
-
+  <h1>CCZ.ONE</h1>
     <h2>Best Crypto Faucets</h2>
 
 <div class="warpper">
