--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <p>$0.00065 every 5 min. PTC, Shortlinks, Offerwalls. $0.01 to Faucetpay.</p>
         <a target="_blank" href="https://freesol.biz/?r=10569"><img src="/file/freesol.png" width="468" height="60"></a><p></p></div>
 
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+          <a href="https://earnmoneyhub.com/?r=10521">5. Cripto.win</a></h3>
+          <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.1 withdrawal to FaucetPay.</p>
+          <a target="_blank" href="https://earnmoneyhub.com/?r=10521"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
+
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://click4bit.com/?ref=14312">5. Click4bit</a></h3>
@@ -126,16 +131,6 @@
      <a target="_blank" href="https://fire-crypto.com/?r=13264" >
                       <img src="/file/Firecrypto.gif" width="468" height="60"/></a><br>
                       <p></p></div>
-
-
-
-                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                        <a href="https://earnmoneyhub.com/?r=10521">16. Earn Money Hub</a></h3>
-                        <p>$0.0004 every 2 min. PTC, Shortlinks, Offerwalls. $0.01 withdrawal to FaucetPay.</p>
-                        <a target="_blank" href="https://earnmoneyhub.com/?r=10521"><img src="/file/emh.png" width="468" height="60"/></a><br><p></p></div>
-
-
-
 
 
                       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
